src/objects/DE_Claims_Asset_Setup__mdt.object
<CustomObject>
    <fields>
        <fullName>IsClaims__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Only if it is checked the Claims(Expense) Records would be created.</inlineHelpText>
        <label>Create Claims</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsHourly__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked the Amount mention on the Price books of the Labour Charge Product are considered to be per hour</inlineHelpText>
        <label>Hourly Labour Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLabour__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked a Labour Charge is added to the Work Order and Service Reports</inlineHelpText>
        <label>Create Labour</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Template_Id__c</fullName>
        <label>Service Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Claims Asset Setup</label>
    <pluralLabel>Claims Asset Setup</pluralLabel>
</CustomObject>